2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (render):
	Changed the color of the 'edge' to be the same as the second gradient,
	just slightly lighter.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (render):
	Doh, forgot separator applets.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (render):
	Fix separator positioning issue.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task.c: (draw):
	Stop task icons from drawing over the solid line at the bottom, need to
	fix applets as well.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (render):
	Added some width when angle > 0.
	Made the front of the bar (when in 3d mode) solid, so it looks more 3d.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	Patch by Miika-Petteri Matikainen <miikapetteri@gmail.com>

	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-gconf.h:
	* src/awn-task.c: (launch_hover_effect):
	Adds an option in gconf to disable bouncing effect.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	Patch by Miika-Petteri Matikainen <miikapetteri@gmail.com>

	* applets/trash/trashapplet.c: (update_transfer_callback):
	* awn-applet-activation/awn-plug.c:
	* src/awn-window.c:
	Fixes some compiler warnings.

2007-07-14  Neil J. Patel  <njpatel@gmail.com>

	Patch by haytjes <hv1989@gmail.com>

	* applets/Makefile.am:
	* applets/notification-area/applet.c: (tray_applet_refresh),
	(tray_icon_added), (awn_applet_factory_init):
	* applets/taskman.desktop:
	* applets/trash/trash.desktop:
	* applets/trash/trashapplet.c: (draw):
	* avant-preferences/window.glade:
	* awn.pc:
	* libawn/awn-defines.h:
	* src/awn-applet-manager.c: (awn_applet_manager_load_applets):
	* src/awn-bar.c: (render_rect), (apply_perspective_x),
	(apply_perspective_y), (render):
	* src/awn-bar.h:
	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-gconf.h:
	* src/awn-task-manager.c: (_task_manager_check_width):
	* src/awn-task.c: (awn_task_init), (draw),