@@ -1,6 +1,11 @@
 2007-07-14  Neil J. Patel  <njpatel@gmail.com>
 
 	* src/awn-bar.c: (render):
+	Make the 'edge' colour that of the border colour.
+
+2007-07-14  Neil J. Patel  <njpatel@gmail.com>
+
+	* src/awn-bar.c: (render):
 	Changed the color of the 'edge' to be the same as the second gradient,
 	just slightly lighter.
 
